Add better picture of asteroid and link to polyhedron potential

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -79,7 +79,7 @@
   \includegraphics[width=0.5\textwidth]{figures/2016AAS/radius_contour.pdf}
 \end{center}
 }
-
+\hyperlink{slide:asteroid_transfer}{\beamergotobutton{Asteroid Transfer}}
 \end{frame}
 
 \begin{frame}[noframenumbering]{Astrodynamics}%-------------------------------------------------------%
