--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -476,15 +476,15 @@
 \subsubsection[Transfers about 4769 Castalia]{Asteroid transfers}
 
 % Results from 2016 AAS
-\begin{frame}{Transfer Objective} %-----------------------------%
+\begin{frame}{Transfer Objective}\label{slide:asteroid_transfer} %-----------------------------%
 
 \begin{itemize}
     \item Goal is to transfer between two equatorial periodic orbits
-    \item Typical scenario during study of an asteroid
+    \item Typical scenario during study of an asteroid~\hyperlink{polyhedron_gravity}{\beamergotobutton{Polyhedron}}
 \end{itemize}
 
 \begin{center}
-    \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/initial_transfer.pdf}~
+    \animategraphics[controls,autoplay,loop,width=0.5\textwidth]{30}{animation/2016AAS/castalia/IMG}{00001}{00999}~\hfill
     \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/initial_transfer_3d.pdf}
 \end{center}
 
