Reword some bullets to fit on one line

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -53,7 +53,7 @@
 \begin{frame} \label{slide:lowthrust_vehicles}%-----------------------------%
 \frametitle{Low-thrust vehicles} % electric propulsion
 \begin{itemize}
-    \item Low-thrust orbital transfers offer increased mission oportunities
+    \item Low-thrust orbital transfers increase mission oportunities
     \begin{itemize}
         \item Electric propulsion is increasing in capability
         \item Offers much higher specific impulse than chemical engines 
