--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -516,7 +516,7 @@
 \begin{frame}{Transfer Simulation}
     \begin{itemize}
         \item Four iterations of the reachable state to meet the target set
-        \item Final transfer is computed with a fixed terminal state constraint
+        \item Final transfer is computed with a fixed terminal state
     \end{itemize}
 
     \begin{center}
