Create handout presentation

--- a/proposal.tex
+++ b/proposal.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,professionalfonts]{beamer}
+\documentclass[handout,11pt,professionalfonts]{beamer}
 % \usefonttheme{serif}
 \usepackage{presentation_packages}
 \usepackage{tikz_packages}
