Fix hyperlink button

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -480,7 +480,7 @@
 
 \begin{itemize}
     \item Goal is to transfer between two equatorial periodic orbits
-    \item Typical scenario during study of an asteroid~\hyperlink{polyhedron_gravity}{\beamergotobutton{Polyhedron}}
+    \item Typical scenario during study of an asteroid~\hyperlink{slide:polyhedron_gravity}{\beamergotobutton{Polyhedron}}
 \end{itemize}
 
 \begin{center}
